--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/prompts": "^0.1.6",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.0"
+        "livewire/livewire": "^3.0",
+        "pxlrbt/filament-excel": "^2.1",
+        "pxlrbt/filament-spotlight": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
